[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/debug_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/menu/industrial_9_square.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/visual/menu/redo_128.png" type="Texture" id=4]
[ext_resource path="res://assets/visual/menu/robot_arm_128.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/menu/wrench_128.png" type="Texture" id=6]
[ext_resource path="res://components/icon_button.tscn" type="PackedScene" id=7]

[node name="DebugMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.141176 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1908.0
margin_bottom = 1068.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="ToggleInvincible" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
margin_right = 943.0
margin_bottom = 30.0
toggle_mode = true
text = "Invincibility"

[node name="SpawnSlug" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
margin_left = 953.0
margin_right = 1896.0
margin_bottom = 30.0
text = "Spawn Slug"

[node name="CreateEnhancement" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
margin_top = 40.0
margin_right = 943.0
margin_bottom = 543.0
text = "Create Enhancement"

[node name="IconButton" parent="NinePatchRect/MarginContainer/GridContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 953.0
margin_top = 40.0
margin_right = 1896.0
margin_bottom = 543.0
icon = ExtResource( 4 )
icon_size = 49

[node name="IconButton2" parent="NinePatchRect/MarginContainer/GridContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 553.0
margin_right = 943.0
margin_bottom = 1056.0
icon = ExtResource( 5 )
icon_size = -4

[node name="ButtonSizer" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer" index="0"]
margin_right = 943.0
margin_bottom = 469.0

[node name="TextureButton" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer/ButtonSizer" index="0"]
margin_right = 943.0
margin_bottom = 469.0

[node name="IconSizer" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer/ButtonSizer/TextureButton" index="0"]
anchor_left = 0.33404
anchor_right = 0.66596
custom_constants/margin_right = -4
custom_constants/margin_top = -4
custom_constants/margin_left = -4
custom_constants/margin_bottom = -4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IconRect" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer/ButtonSizer/TextureButton/IconSizer" index="0"]
margin_left = -4.0
margin_top = -4.0
margin_right = 317.0
margin_bottom = 473.0
texture = ExtResource( 5 )

[node name="LabelSpacer" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer" index="1"]
margin_top = 479.0
margin_right = 943.0
margin_bottom = 503.0

[node name="DescLabel" parent="NinePatchRect/MarginContainer/GridContainer/IconButton2/VBoxContainer/LabelSpacer" index="0"]
margin_right = 943.0
margin_bottom = 24.0

[node name="IconButton3" parent="NinePatchRect/MarginContainer/GridContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 953.0
margin_top = 553.0
margin_right = 1896.0
margin_bottom = 1056.0
icon = ExtResource( 6 )
icon_size = 55

[connection signal="toggled" from="NinePatchRect/MarginContainer/GridContainer/ToggleInvincible" to="." method="_on_ToggleInvincible_toggled"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/GridContainer/SpawnSlug" to="." method="_on_SpawnSlug_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/GridContainer/CreateEnhancement" to="." method="_on_CreateEnhancement_pressed"]

[editable path="NinePatchRect/MarginContainer/GridContainer/IconButton2"]
